# guardloop.dev

./: .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  CRITICAL.md  FINAL_PROJECT_SUMMARY.md  LICENSE  MANIFEST.in  PHASE_2_SUMMARY.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  TEST_GUIDE.md  TEST_RESULTS.md  config.example.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_prewarm.py  whattocorrect.txt  whattocorrect2.txt
.github/workflows/: publish.yml  test.yml
data/: schema.sql
docs/: PERFORMANCE_OPTIMIZATION_PREWARM.md  PHASE1_COMPLETE.md  PHASE1_TOKEN_OPTIMIZATION.md  PHASE2_SMART_ROUTING.md  PHASE3_ADVANCED_FEATURES.md  PHASE4_TESTING_VALIDATION.md  PHASE_3_COMPLETION.md  PHASE_4_COMPLETION.md  configuration.md  launch-checklist.md  optimization.md  phase5-agents.md  phase6-summary.md  phase7-summary.md
guardrails/: AI_Failure_Modes.md  AI_Guardrails.md  AI_Troubleshooting_Guide.md  BPSBS.md  README.md  UX_UI_Guardrails.md
guardrails/agents/: README.md  business-analyst.md  cold-blooded-architect.md  dba.md  documentation-codifier.md  merciless-evaluator.md  orchestrator.md  ruthless-coder.md  ruthless-tester.md  secops-engineer.md  sre-ops.md  standards-oracle.md  support-debug-hunter.md  ux-ui-designer.md
landing-page/: index.html  script.js  styles.css
scripts/: README.md  benchmark_optimization.py  generate_agent_summaries.py  generate_core_guardrails.py  guardrail-wrapper.sh  install.sh  setup_aliases.sh  test_agent_summaries.py  test_core_guardrails.py  uninstall.sh
src/guardloop/: __init__.py  main.py
src/guardrail/: main.py
tests/: conftest.py  test_ace.py  test_budget_manager.py  test_chain_optimizer.py  test_integration.py  test_semantic_matcher.py  test_smart_selector.py
tests/performance/: __init__.py  test_optimization.py
tests/test_adapters/: test_adapters.py  test_codex_adapter.py  test_gemini_adapter.py
tests/test_agents/: __init__.py  test_agents.py  test_business_analyst_agent.py  test_chain_optimizer.py  (+6 more)
website/: CNAME  README.md  index.html
(+83 files in other folders)
